# ml-template-deploy

./: .gitignore  README.MD  tree.txt
src/: .env  README.MD  docker-compose.yml  nginx.conf
src/backend/: .env  Dockerfile  README.MD  docker-compose.yml  pyproject.toml  test_db_connection.py
src/backend/app/: code_collector.ipynb  collected_content_api.txt  collected_content_core.txt  main.py  output.txt
src/backend/app/alembic/: README  env.py
src/backend/app/alembic/versions/: 2024_11_06_1247-7cbe43f8d092_initial_migration.py
src/backend/app/api/: deps.py  main.py
src/backend/app/api/routes/: actions.py  login.py  users.py  utils.py
src/backend/app/core/: config.py  db.py  security.py  tasks.py  utils.py
src/backend/app/core/crud/: action.py  user.py
src/backend/app/core/models/: __init__.py  action.py  base.py  refresh_token.py  token_blacklist.py  user.py
src/backend/data/pgdata/base/16384/: 1247  1249  1259  16385  16388  16390  16395  16396  16398  16404  16405  2224  24595  24597  24603  24604  24606  2579  2604  2606  2608  2610  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2699  2701  2702  (+5 more)
src/backend/data/pgdata/global/: 1260  1262  2671  pg_control  pg_internal.init
src/backend/data/pgdata/pg_stat/: db_0.stat  db_16384.stat  global.stat
src/frontend/: Dockerfile  README.MD  nginx.conf
src/frontend/bootstrap/v1/: _base.html  _session_view.html  index.html  login.html  logout.html  register.html  session_view.html
src/frontend/strm/: .env  deploy.txt  pyproject.toml
src/frontend/strm/app/: main.py
src/frontend/strm/app/core/: utils.py
src/frontend/strm/app/inner_pages/: __init__.py  home.py  job_analyzer.py  login.py  logout.py
